  mediawiki.api.upload, mediawiki.api.user, mediawiki.api.watch,
  mediawiki.api.messages, and mediawiki.api.rollback.
* The 'jquery.byteLimit' module alias for 'jquery.lengthLimit',
  deprecated in 1.31, was removed.
* Revision::fetchRevision(), deprecated in 1.28, was removed.
* Class SquidUpdate, deprecated in 1.27, was removed.

=== Deprecations in 1.33 ===
* The configuration option $wgUseESI has been deprecated, and is expected
  to be removed in a future release.
* The configuration option $wgSquidPurgeUseHostHeader has been deprecated,
  and is expected to be removed in a future release.
* The configuration options $wgFixArabicUnicode and $wgFixMalayalamUnicode,
  introduced in MW 1.17, have been deprecated.  These fixes will always be
  applied for Arabic and Malayalam in the future.  Please enable these on
  your local wiki (if you have them explicitly set to false) and run
  maintenance/cleanupTitles.php to fix any existing page titles.
* The LegacyHookPreAuthenticationProvider class, deprecated since its creation
  in 1.27 as part of the AuthManager re-write, now emits deprecation warnings.
  This will help identify the issue if you added it to $wgAuthManagerConfig.
* wfSplitWikiId() is now deprecated. Cache key generation should have the wiki
  domain ID as a key component and use makeGlobalKey().
* (T202094) Title::getUserCaseDBKey() is deprecated; instead, please use
  Title::getDBKey(), which doesn't vary case.
* User::getPasswordValidity() is now deprecated. User::checkPasswordValidity()
  returns the same information in a more useful format.
* For Linker::generateTOC() and Linker::tocList(), passing strings or booleans
  as the $lang parameter was deprecated. The same applies to DummyLinker.
* The PasswordPolicy 'PasswordCannotBePopular' has been deprecated. To
  follow best practices, it is reccommended to use 'PasswordNotInLargeBlacklist'
  instead which blacklists 100,000 commonly used passwords.