@@ -191,6 +191,8 @@ because of Phabricator reports.
   deprecated in 1.31, was removed.
 * Revision::fetchRevision(), deprecated in 1.28, was removed.
 * Class SquidUpdate, deprecated in 1.27, was removed.
+* Title->getSquidURLs(), deprecated in 1.27, was removed. Instead, use
+  Title->getCdnUrls().
 
 === Deprecations in 1.33 ===
 * The configuration option $wgUseESI has been deprecated, and is expected
